// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button rendering Basic should match the snapshot 1`] = `
<div>
  <button
    class="ButtonUnstyled-root brd-c-dsuUsp brd-c-dsuUsp-foEQdY-btnType-primary brd-c-dsuUsp-lKjfQ-size-md"
    role="button"
    tabindex="0"
    type="button"
  >
    <span>
      42 is the meaning of life
    </span>
  </button>
</div>
`;

exports[`Button rendering IconOnly should match the snapshot 1`] = `
<div>
  <button
    aria-label="Add Record"
    class="ButtonUnstyled-root brd-c-dsuUsp brd-c-dsuUsp-kEEMvd-btnType-secondary brd-c-dsuUsp-APANR-size-lg brd-c-dsuUsp-kaXTQH-circle-lg brd-c-dsuUsp-iDpwiq-hasIcon-true"
    role="button"
    tabindex="0"
    type="button"
  >
    <i
      data-testid="mock-icon-Add"
    />
  </button>
</div>
`;

exports[`Button rendering Loading should match the snapshot 1`] = `
<div>
  <button
    class="ButtonUnstyled-root Mui-disabled brd-c-dsuUsp brd-c-dsuUsp-kEEMvd-btnType-secondary brd-c-dsuUsp-lKjfQ-size-md brd-c-dsuUsp-gvlAwB-loading-true brd-c-dsuUsp-iDpwiq-hasIcon-true"
    disabled=""
    role="button"
    tabindex="-1"
    type="button"
  >
    <i
      data-testid="mock-icon-Rotation"
    />
    <span>
      Loading...
    </span>
  </button>
</div>
`;

exports[`Button rendering LoadingAfter5Seconds should match the snapshot 1`] = `
<div>
  <button
    class="ButtonUnstyled-root brd-c-dsuUsp brd-c-dsuUsp-kEEMvd-btnType-secondary brd-c-dsuUsp-lKjfQ-size-md"
    role="button"
    tabindex="0"
    type="button"
  >
    <span>
      Loading after 5 seconds...
    </span>
  </button>
</div>
`;

exports[`Button rendering WithEndIcon should match the snapshot 1`] = `
<div>
  <button
    class="ButtonUnstyled-root brd-c-dsuUsp brd-c-dsuUsp-foEQdY-btnType-primary brd-c-dsuUsp-lKjfQ-size-md brd-c-dsuUsp-iDpwiq-hasIcon-true"
    role="button"
    tabindex="0"
    type="button"
  >
    <span>
      Get started
    </span>
    <i
      data-testid="mock-icon-ArrowRight"
    />
  </button>
</div>
`;

exports[`Button rendering WithStartIcon should match the snapshot 1`] = `
<div>
  <button
    class="ButtonUnstyled-root brd-c-dsuUsp brd-c-dsuUsp-juMjLD-btnType-danger brd-c-dsuUsp-lKjfQ-size-md brd-c-dsuUsp-iDpwiq-hasIcon-true"
    role="button"
    tabindex="0"
    type="button"
  >
    <i
      data-testid="mock-icon-Delete"
    />
    <span>
      Confirm to 
      <strong>
        delete
      </strong>
    </span>
  </button>
</div>
`;

exports[`Button rendering should match the snapshot as a block button 1`] = `
<div>
  <button
    class="ButtonUnstyled-root brd-c-dsuUsp brd-c-dsuUsp-foEQdY-btnType-primary brd-c-dsuUsp-lKjfQ-size-md brd-c-dsuUsp-iqjHSX-block-true"
    role="button"
    tabindex="0"
    type="button"
  >
    <span>
      42 is the meaning of life
    </span>
  </button>
</div>
`;

exports[`Button rendering should match the snapshot by size "lg" 1`] = `
<div>
  <button
    class="ButtonUnstyled-root brd-c-dsuUsp brd-c-dsuUsp-foEQdY-btnType-primary brd-c-dsuUsp-APANR-size-lg"
    role="button"
    tabindex="0"
    type="button"
  >
    <span>
      42 is the meaning of life
    </span>
  </button>
</div>
`;

exports[`Button rendering should match the snapshot by size "md" 1`] = `
<div>
  <button
    class="ButtonUnstyled-root brd-c-dsuUsp brd-c-dsuUsp-foEQdY-btnType-primary brd-c-dsuUsp-lKjfQ-size-md"
    role="button"
    tabindex="0"
    type="button"
  >
    <span>
      42 is the meaning of life
    </span>
  </button>
</div>
`;

exports[`Button rendering should match the snapshot by size "sm" 1`] = `
<div>
  <button
    class="ButtonUnstyled-root brd-c-dsuUsp brd-c-dsuUsp-foEQdY-btnType-primary brd-c-dsuUsp-fdOzqt-size-sm"
    role="button"
    tabindex="0"
    type="button"
  >
    <span>
      42 is the meaning of life
    </span>
  </button>
</div>
`;

exports[`Button rendering should match the snapshot by type "danger" 1`] = `
<div>
  <button
    class="ButtonUnstyled-root brd-c-dsuUsp brd-c-dsuUsp-juMjLD-btnType-danger brd-c-dsuUsp-lKjfQ-size-md"
    role="button"
    tabindex="0"
    type="button"
  >
    <span>
      42 is the meaning of life
    </span>
  </button>
</div>
`;

exports[`Button rendering should match the snapshot by type "primary" 1`] = `
<div>
  <button
    class="ButtonUnstyled-root brd-c-dsuUsp brd-c-dsuUsp-foEQdY-btnType-primary brd-c-dsuUsp-lKjfQ-size-md"
    role="button"
    tabindex="0"
    type="button"
  >
    <span>
      42 is the meaning of life
    </span>
  </button>
</div>
`;

exports[`Button rendering should match the snapshot by type "secondary" 1`] = `
<div>
  <button
    class="ButtonUnstyled-root brd-c-dsuUsp brd-c-dsuUsp-kEEMvd-btnType-secondary brd-c-dsuUsp-lKjfQ-size-md"
    role="button"
    tabindex="0"
    type="button"
  >
    <span>
      42 is the meaning of life
    </span>
  </button>
</div>
`;

exports[`Button rendering should match the snapshot by type "text" 1`] = `
<div>
  <button
    class="ButtonUnstyled-root brd-c-dsuUsp brd-c-dsuUsp-eWWUXK-btnType-text brd-c-dsuUsp-lKjfQ-size-md"
    role="button"
    tabindex="0"
    type="button"
  >
    <span>
      42 is the meaning of life
    </span>
  </button>
</div>
`;
